Bug 828731 - Wait for the framebuffer to become ready before trying to open it. r=mwu